--- a/plutopay.html
+++ b/plutopay.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comme:wght@200&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About Kavita V</title>
 </head>
 <body>
@@ -164,7 +168,8 @@
                             <h3>Thank You for reading through my portfolio!
                                 </h3>
                         </div>
-                <a href="#">Read More</a>
+                         <a href="#" class="button">Read more</a>
+
             </div>
             </div>
     
@@ -181,7 +186,7 @@
             </p>
             
         <div>
-         <a href="mailto:office@careerfoundry.com">Email me</a>
+         <a class="button"href="mailto:office@careerfoundry.com">Email me</a>
             </div>
 <div>
     <!--Social Media Layout and Placeholders-->
