--- a/about.html
+++ b/about.html
@@ -26,6 +26,9 @@
     <main>
         
         <div id="about">
+            <div class="row">
+                <div class="col-md-6">
+                  <picture>
             <div>
                 <h1>About Me</h1>
             </div>
@@ -90,6 +93,9 @@ experience for the business and its clients!
        <footer id=“contact”>
         <div>
            <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                  <picture>
                <h2>Get in Touch</h2>
                <p>
                    Do you like my work and want to discuss opportunities? Please get in touch. Call: <a href="tel:512-921-7708">5129217708</a> .
