--- a/about.html
+++ b/about.html
@@ -108,5 +108,7 @@
         <p id="Copyright"> Kavita V 2024</p>        
     </footer>    
   
+    <script src="js/scripts.js"></script>
+    
 </body>
 </html>
