--- a/index.html
+++ b/index.html
@@ -98,5 +98,6 @@
         <p id="Copyright"> Kavita V 2024</p>        
     </footer>    
   
+    <script src="js/scripts.js"></script>
 </body>
 </html>
