--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://kit.fontawesome.com/fd531ad4f4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,10 +15,14 @@
 <header>
     <div class="container">
         <div class="navtoggle" id="myNavtoggle">
-            <a href="index.html"><svg width="102" height="51" viewBox="0 0 102 51" fill="none" xmlns="http://www.w3.org/2000/svg" class="logo">
-                <path d="M23 31L44.5 3L77.5 48L100 19.5" stroke="#C17B8D" stroke-width="2.5" stroke-linecap="round" />
-                <path d="M2 31L23.5 3L56.5 48L79 19.5" stroke="black" stroke-width="2.5" stroke-linecap="round" />
-            </svg></a>
+            
+            <a href="index.html">
+                <svg width="102" height="51" viewBox="0 0 102 51" fill="none" xmlns="http://www.w3.org/2000/svg" class="logo">
+                    <path d="M23 31L44.5 3L77.5 48L100 19.5" stroke="#C17B8D" stroke-width="2.5" stroke-linecap="round" />
+                    <path d="M2 31L23.5 3L56.5 48L79 19.5" stroke="black" stroke-width="2.5" stroke-linecap="round" />
+                </svg>
+            </a>
+            
             <nav>
                 <ul></ul>
                 <ul class="navigation">
@@ -98,6 +103,7 @@
         <p id="Copyright"> Kavita V 2024</p>        
     </footer>    
   
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
 </body>
 </html>
