Changed the text
Changed the text for the intro page

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <header>
         <div class="container">
             <div class="navtoggle" id="myNavtoggle">
-                <a href="index.html"><svg width="102" height="51" viewBox="0 0 102 51" fill="none" xmlns="http://www.w3.org/2000/svg" class="logo">
+                <a href="index.html"><svg width="102" height="51" viewbox="0 0 102 51" fill="none" xmlns="http://www.w3.org/2000/svg" class="logo">
                     <path d="M23 31L44.5 3L77.5 48L100 19.5" stroke="#C17B8D" stroke-width="2.5" stroke-linecap="round" />
                     <path d="M2 31L23.5 3L56.5 48L79 19.5" stroke="black" stroke-width="2.5" stroke-linecap="round" />
                 </svg></a>
@@ -63,7 +63,7 @@
 
     <div class="container">
         <div class="row">
-            <h2>Skills & Tools</h2>
+            <h2>Skills and Tools</h2>
             <div class="col-md-6">
                 <h3>Skills</h3>
                 <ul>
@@ -74,7 +74,7 @@
                     <li>User Stories and Personas
                     <li>User Flows
                     <li>Journey Maps and Sitemaps
-                    <li>Wireframing & Prototyping: Low-Mid-High
+                    <li>Wireframing and Prototyping: Low-Mid-High
                     
                 </ul>
             </div>
@@ -106,7 +106,8 @@
             <a href=https://www.linkedin.com/in/kavita-v-501b1123b><img class="social" src="files/linkedin.svg">
             <a href="https://www.behance.net/embed/project/182841917?ilo0=1" height="316" width="404" allowfullscreen lazyload frameborder="0" allow="clipboard-write" refererPolicy="strict-origin-when-cross-origin"></iframe> <img class="social" src="files/behance.svg"></a>
         </div>
-        <p id="Copyright"> Kavita V 2024</p>        
+        <p id="Copyright"> Kavita V 2024</p>  
+        <a href="files/Kavita-Vasudevan-BA-Resume old.pdf">Check out my Resume!      
     </footer>    
   
     
