Prettier/hint linters added
added linters to the html pages

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 project-2">
                 <picture>
                     <source srcset="img/pluto pay/Pluto_Pay @2x.jpg.jpg" media="(max-width:767px)">
                     <img src="img/pluto pay/Pluto Pay coming soon.jpg" alt="Image of work in progress">
@@ -100,7 +100,7 @@
 
         <div class="footer icon">      
             <a href="https://www.linkedin.com/in/kavita-v-501b1123b"><img class="social" src="files/linkedin.svg"></a>
-            <a href="https://www.behance.net/embed/project/182841917?ilo0=1" height="316" width="404" allowfullscreen lazyload frameborder="0" allow="clipboard-write" refererpolicy="strict-origin-when-cross-origin"></iframe> <img class="social" src="files/behance.svg"></a>
+            <a href="https://www.behance.net/embed/project/182841917?ilo0=1" height="316" width="404" allowfullscreen lazyload frameborder="0" allow="clipboard-write" refererpolicy="strict-origin-when-cross-origin"><img class="social" src="files/behance.svg"></a>
         </div>
         <p id="Copyright"> Kavita V 2024</p>  
         <a href="files/Kavita-Vasudevan-BA-Resume old.pdf">Check out my Resume!</a>
